build/skaffold/k8s/hello.deployment.yaml
# This Deployment manifest defines:
# - single-replica deployment of the container image, with label "app: go-hello-world"
# - Pod exposes port 8080
# - specify PORT environment variable to the container process
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-hello-world
  template:
    metadata:
      labels:
        app: go-hello-world
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: server
        image: go-hello-world
        ports:
        - containerPort: 8080
