build/skaffold/k8s/hello.gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-hello-world-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-hello-world
spec:
  hosts:
  - "*"
  gateways:
  - go-hello-world-gateway
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: go-hello-world-external
        port:
          number: 5000
